Estado del arte: Taihú/Rodrigo review from 07/02/2017
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -1396,3 +1396,105 @@ month={Sept},}
   publisher={Springer}
 }
 
+@INPROCEEDINGS{armesto2004encoder,
+author={L. Armesto and J. Tornero},
+booktitle={2004 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (IEEE Cat. No.04CH37566)},
+title={SLAM based on Kalman filter for multi-rate fusion of laser and encoder measurements},
+year={2004},
+volume={2},
+pages={1860-1865 vol.2},
+keywords={Kalman filters;laser ranging;nonlinear filters;path planning;performance index;SLAM problem;encoder measurement;extended Kalman filter;laser measurement;multirate fusion;performance index;unscented Kalman filter;Acceleration;Fuses;Laser fusion;Laser radar;Particle measurements;Robot sensing systems;Sampling methods;Sensor systems;Simultaneous localization and mapping;Vehicle dynamics},
+doi={10.1109/IROS.2004.1389668},
+month={Sept},}
+
+@phdthesis{carlson2010mapping,
+  title={Mapping large, urban environments with gps-aided slam},
+  author={Carlson, Justin},
+  year={2010},
+  school={Georgia Institute of Technology}
+}
+
+@article{nutzi2011fusion,
+  title={Fusion of IMU and vision for absolute scale estimation in monocular SLAM},
+  author={N{\"u}tzi, Gabriel and Weiss, Stephan and Scaramuzza, Davide and Siegwart, Roland},
+  journal={Journal of intelligent \& robotic systems},
+  volume={61},
+  number={1},
+  pages={287--299},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{delaunay1934sphere,
+  title={Sur la sphere vide},
+  author={Delaunay, Boris},
+  journal={Izv. Akad. Nauk SSSR, Otdelenie Matematicheskii i Estestvennyka Nauk},
+  volume={7},
+  number={793-800},
+  pages={1--2},
+  year={1934}
+}
+
+@article{felzenszwalb2004efficient,
+  title={Efficient graph-based image segmentation},
+  author={Felzenszwalb, Pedro F and Huttenlocher, Daniel P},
+  journal={International journal of computer vision},
+  volume={59},
+  number={2},
+  pages={167--181},
+  year={2004},
+  publisher={Springer}
+}
+
+@inproceedings{mori2005guiding,
+  title={Guiding model search using segmentation},
+  author={Mori, Greg},
+  booktitle={Computer Vision, 2005. ICCV 2005. Tenth IEEE International Conference on},
+  volume={2},
+  pages={1417--1423},
+  year={2005},
+  organization={IEEE}
+}
+
+@article{levinshtein2009turbopixels,
+  title={Turbopixels: Fast superpixels using geometric flows},
+  author={Levinshtein, Alex and Stere, Adrian and Kutulakos, Kiriakos N and Fleet, David J and Dickinson, Sven J and Siddiqi, Kaleem},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={31},
+  number={12},
+  pages={2290--2297},
+  year={2009},
+  publisher={IEEE}
+}
+
+@inproceedings{vedaldi2008quick,
+  title={Quick shift and kernel methods for mode seeking},
+  author={Vedaldi, Andrea and Soatto, Stefano},
+  booktitle={European Conference on Computer Vision},
+  pages={705--718},
+  year={2008},
+  organization={Springer}
+}
+
+@techreport{achanta2010slic,
+  title={Slic superpixels},
+  author={Achanta, Radhakrishna and Shaji, Appu and Smith, Kevin and Lucchi, Aurelien and Fua, Pascal and S{\"u}sstrunk, Sabine},
+  year={2010}
+}
+
+@article{achanta2012slic,
+  title={SLIC superpixels compared to state-of-the-art superpixel methods},
+  author={Achanta, Radhakrishna and Shaji, Appu and Smith, Kevin and Lucchi, Aurelien and Fua, Pascal and S{\"u}sstrunk, Sabine},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={34},
+  number={11},
+  pages={2274--2282},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{concha3d,
+  title={3D Reconstruction of Superpixels and its Use in Monocular SLAM},
+  author={Concha, Alejo and Civera, Javier}
+}
+
